# Passivate

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  hydra_passivate.json
passivate/: Cargo.toml  rustfmt.toml
passivate/.cargo/: config.toml
passivate/.config/: nextest.toml  passivate.toml
passivate/.zed/: settings.json
passivate/app/: Cargo.toml
passivate/app/src/: app.rs  app_state.rs  lib.rs  main.rs  run.rs  start.rs
passivate/app/src/testing/: app_state.rs
passivate/app/tests/: passivate_tests.rs
passivate/cargo/: Cargo.toml
passivate/cargo/src/: cargo_workspace_errors.rs  lib.rs
passivate/configuration/: Cargo.toml
passivate/configuration/src/: configuration.rs  configuration_errors.rs  configuration_event.rs  configuration_manager.rs  configuration_source.rs  default_paths.rs  lib.rs
passivate/core/: Cargo.toml
passivate/core/src/: compose.rs  lib.rs  passivate_args.rs  passivate_state.rs  passivate_state_change.rs  startup_errors.rs
passivate/coverage/: Cargo.toml
passivate/coverage/src/: compute_coverage.rs  coverage_errors.rs  coverage_status.rs
passivate/delegation/: Cargo.toml
passivate/delegation/src/: cancellation.rs  lib.rs  tx_rx.rs
passivate/egui/core/: Cargo.toml
passivate/egui/docking/: Cargo.toml
passivate/egui/hyp_snapshots/: Cargo.toml
passivate/egui/passivate_egui/: Cargo.toml
passivate/egui/views/: Cargo.toml
passivate/hyp_names/: Cargo.toml
passivate/hyp_names/src/: crate_id.rs  hyp_id.rs  hyp_name_strategy.rs  lib.rs  package_id.rs
passivate/hyp_names/tests/: integration_tests.rs  passivate_hyp_names_tests.rs
passivate/id_chain_tree/: Cargo.toml
passivate/id_chain_tree/src/: chain_macro.rs  entry.rs  id_chain.rs  lib.rs  node.rs  node_view.rs  tree.rs  tree_display.rs  tree_macro.rs
passivate/id_chain_tree/tests/: tree_tests.rs
passivate/log/: Cargo.toml
passivate/log/src/: lib.rs  log_message.rs  tx_log.rs
passivate/model/bridge/: Cargo.toml
passivate/model/core/: Cargo.toml
passivate/model/hyp_tree/: Cargo.toml
passivate/model/rust/: Cargo.toml
passivate/model/session/: Cargo.toml
passivate/notify/: Cargo.toml
passivate/notify/src/: notify_change_events.rs  notify_change_events_errors.rs
passivate/passivate_app/: Cargo.toml
passivate/passivate_app/src/: app.rs  app_state.rs  error_app.rs  lib.rs  main.rs  passivate_notify.rs  run.rs  startup_errors.rs  views.rs
passivate/passivate_app/tests/: main_stub.rs  passivate_tests.rs  view_tests.rs
passivate/passivate_cargo/: Cargo.toml
passivate/passivate_cargo/src/: cargo_workspace.rs
passivate/passivate_cargo/tests/: cargo_workspace_tests.rs
passivate/passivate_configuration/: Cargo.toml
passivate/passivate_configuration/src/: configuration.rs  configuration_event.rs  configuration_manager.rs  configuration_source.rs  lib.rs
passivate/passivate_core/: Cargo.toml
passivate/passivate_core/src/: change_events.rs  compose.rs  coverage.rs  lib.rs  passivate_args.rs  passivate_cargo.rs  passivate_grcov.rs  passivate_state.rs  passivate_state_change.rs  run.rs  startup_errors.rs  test_execution.rs  tests.rs
passivate/passivate_core/tests/: cargo_test_tests.rs  grcov_acceptance.rs  grcov_tests.rs  test_runner.rs
passivate/passivate_coverage/: Cargo.toml
passivate/passivate_coverage/src/: coverage_errors.rs  coverage_status.rs  lib.rs
passivate/passivate_delegation/: Cargo.toml
passivate/passivate_delegation/src/: actor.rs  actor.tests.rs  actor_api.rs  actor_event.rs  actor_tx.rs  cancellation.rs  handler.rs  lib.rs  tx_rx.rs
passivate/passivate_delegation_proc/: Cargo.toml
passivate/passivate_egui/: Cargo.toml
passivate/passivate_egui/src/: details_view.rs  lib.rs  log_view.rs  passivate_layout.rs  passivate_view.rs  passivate_view_state.rs  passivate_views.rs  test_run_view.rs
passivate/passivate_egui/tests/: docking_tests.rs
passivate/passivate_hyp_execution/: Cargo.toml
passivate/passivate_hyp_execution/src/: change_event_handler.rs  hyp_run_handler.rs  hyp_runner.rs  lib.rs  nextest_cargo_options.rs  test_run_handler.rs  test_runner.rs
passivate/passivate_hyp_execution/tests/: grcov_tests.rs  test_run_handler_tests.rs
passivate/passivate_hyp_model/: Cargo.toml
passivate/passivate_hyp_model/src/: change_event.rs  hyp.rs  hyp_iter_ext.rs  hyp_run.rs  hyp_run_events.rs  hyp_run_state.rs  hyp_run_trigger.rs  hyp_session.rs  hyp_session_event.rs  hyp_session_state.rs  hyp_set.rs  hyp_state.rs  lib.rs  passivate_state.rs  single_hyp.rs  single_hyp_status.rs  single_test.rs  single_test_status.rs  test_collection.rs  test_run.rs  test_run_events.rs
passivate/passivate_hyp_model/tests/: hyp_session_tests.rs
passivate/passivate_hyp_names/: Cargo.toml
passivate/passivate_hyp_names/src/: hyp_id.rs  hyp_name_strategy.rs  lib.rs
passivate/passivate_hyp_names/tests/: integration_tests.rs  passivate_hyp_names_tests.rs
passivate/passivate_log/: Cargo.toml
passivate/passivate_log/src/: log_message.rs  tx_log.rs
passivate/passivate_notify/: Cargo.toml
passivate/passivate_notify/src/: lib.rs  notify_change_events.rs
passivate/passivate_snapshots/: Cargo.toml
passivate/passivate_snapshots/src/: lib.rs  snapshots.rs
passivate/passivate_testing/: Cargo.toml
passivate/passivate_testing/src/: lib.rs  path_resolution.rs  spy_log.rs
passivate/passivate_views/: Cargo.toml
passivate/passivate_views/src/: configuration_view.rs  coverage_view.rs  details_view.rs  lib.rs  log_view.rs  passivate_layout.rs  passivate_view.rs  test_run_view.rs  view.rs
passivate/passivate_views/tests/: docking_tests.rs
passivate/run/core/: Cargo.toml
passivate/run/rust/: Cargo.toml
passivate/sample_project/tests/: add_tests.rs
passivate/src/: app.rs  egui_tests_view.rs  main.rs  startup_errors.rs
passivate/src/passivate_notify/: notify_change_events.rs  notify_change_events_errors.rs
passivate/testing/: Cargo.toml
passivate/testing/src/: lib.rs  path_resolution.rs  spy_log.rs  test_data_setup.rs
test_data/project_snapshot_tests/: Cargo.toml
test_data/project_snapshot_tests/src/: lib.rs
(+293 files in other folders)
