[package]
name = "passivate"
version = "0.1.0"
edition = "2021"

[dependencies]
passivate_core = { path = "./passivate_core" }

egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
notify = "8.0.0"
futures = "0.3.31"