[workspace]
members = [
    "passivate_core",
    "passivate_app",
    "passivate_delegation",
    "passivate_hyp_names"
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = "abort"

[profile.bench]
panic = "abort"

[dependencies]
egui = "0.31"
egui_dock = "0.16.0"
futures = "0.3.31"
chrono = "0.4.40"
serde = "1.0"
serde_json = "1.0"
indexmap = "2.8.0"
crossbeam-channel = "0.5.14"
dunce = "1.0.5"
camino = "1.2.0"
eframe = { version = "0.31", features = [ "default_fonts", "wgpu", "accesskit", "wayland" ] }
mockall = "0.13.1"
libtest-mimic = "0.8.1"
egui_kittest = { version = "0.31.0", features = [ "wgpu", "snapshot" ] }
stdext = "0.3.3"
tokio = { version = "1.42.0", features = [ "full" ] }
rstest = "0.26.1"
pretty_assertions = "1.4.1"
galvanic-assert = "0.8.7"
faux = "0.1.13"
clap = "4.5.48"
fs_extra = "1.3.0"
thiserror = "2.0.11"
enum-as-inner = "0.6.1"
duct = "0.13.7"
cargo_metadata = "0.19.2"
epaint = "0.31"
png = "0.17.16"
bon = "3.6.5"
guppy = "0.17.21"
itertools = "0.14.0"