[workspace]
members = [
    "passivate_core",
    "passivate_app",
    "passivate_delegation",
    "passivate_hyp_names",
    "passivate_views", 
    "passivate_hyp_model"
    ]

resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = "abort"

[profile.bench]
panic = "abort"

[workspace.dependencies]
bon = "3.6.5"
camino = "1.2.0"
cargo_metadata = "0.19.2"
chrono = "0.4.40"
clap = "4.5.48"
crossbeam-channel = "0.5.14"
duct = "0.13.7"
dunce = "1.0.5"
eframe = { version = "0.31", features = [ "default_fonts", "wgpu", "accesskit", "wayland" ] }
egui = "0.31"
egui_dock = "0.16.0"
egui_kittest = { version = "0.31.0", features = [ "wgpu", "snapshot" ] }
enum-as-inner = "0.6.1"
epaint = "0.31"
faux = "0.1.13"
fs_extra = "1.3.0"
futures = "0.3.31"
galvanic-assert = "0.8.7"
guppy = "0.17.21"
indexmap = "2.8.0"
itertools = "0.14.0"
libtest-mimic = "0.8.1"
log = "0.4.28"
mockall = "0.13.1"
notify = "8.2.0"
png = "0.17.16"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.101"
quote = "1.0.41"
rstest = "0.26.1"
serde = "1.0"
serde_json = "1.0"
stdext = "0.3.3"
syn = "2.0.106"
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = [ "full" ] }
toml = "0.9.8"
