[package]
name = "passivate"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_core = { path = "../core" }
passivate_log = { path = "../log" }
passivate_egui_views = { path = "../egui/views" }
passivate_egui_docking = { path = "../egui/docking" }
passivate_delegation = { path = "../delegation" }
passivate_model_bridge = { path = "../model/bridge" }
passivate_model_core = { path = "../model/core" }
passivate_run_rust = { path = "../run/rust" }
passivate_configuration = { path = "../configuration" }
passivate_hyp_names = { path = "../hyp_names" }
passivate_egui_core = { path = "../egui/core" }
passivate_egui_view_configuration = { path = "../egui/view/configuration" }
passivate_egui_view_coverage = { path = "../egui/view/coverage" }
passivate_egui_view_details = { path = "../egui/view/details" }
passivate_egui_view_log = { path = "../egui/view/log" }
passivate_egui_view_session = { path = "../egui/view/session" }

bon.workspace = true
clap.workspace = true
egui = { workspace = true, features = [ "persistence" ] }
egui_dock.workspace = true
futures.workspace = true
chrono.workspace = true
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true, features = [ "preserve_order" ] }
indexmap = { workspace = true, features = [ "serde" ] }
crossbeam-channel.workspace = true
dunce.workspace = true
camino.workspace = true
eframe.workspace = true
log.workspace = true
itertools.workspace = true
maybe-owned.workspace = true

[dev-dependencies]
passivate_testing = { path = "../testing" }

mockall.workspace = true
libtest-mimic.workspace = true
egui_kittest.workspace = true
stdext.workspace = true
tokio.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
galvanic-assert.workspace = true

[[test]]
name = "passivate_tests"
harness = false

[features]
testing = []
