[package]
name = "passivate_configuration"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_delegation = { path = "../delegation" }
passivate_hyp_names = { path = "../hyp_names" }

camino.workspace = true
faux.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
serde_json.workspace = true
stdext.workspace = true

[dev-dependencies]
passivate_testing = { path = "../testing" }

galvanic-assert.workspace = true
itertools.workspace = true
