[package]
name = "passivate_configuration"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_delegation = { path = "../delegation" }
passivate_hyp_names = { path = "../hyp_names" }
passivate_testing = { path = "../testing", optional = true }

camino.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
serde_json.workspace = true
stdext.workspace = true
mockall.workspace = true

[dev-dependencies]
galvanic-assert.workspace = true
itertools.workspace = true

[features]
testing = ["dep:passivate_testing"]
