[package]
name = "passivate_core"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_delegation = { path = "../delegation", features = ["testing"]}
passivate_hyp_names = { path = "../hyp_names" }
passivate_model_bridge = { path = "../model/bridge" }
passivate_model_core = { path = "../model/core" }
passivate_model_rust = { path = "../model/rust" }
passivate_run_rust = { path = "../run/rust" }
passivate_configuration = { path = "../configuration" }
passivate_log = { path = "../log" }
passivate_notify = { path = "../notify" }
passivate_coverage = { path = "../coverage" }
passivate_testing = { path = "../testing" }

bon.workspace = true
camino.workspace = true
chrono.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
duct.workspace = true
dunce.workspace = true
fs_extra.workspace = true
futures.workspace = true
guppy.workspace = true
itertools.workspace = true
log.workspace = true
mockall.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
stdext.workspace = true
pretty_assertions.workspace = true
galvanic-assert.workspace = true
