[package]
name = "passivate_coverage"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_delegation = { path = "../delegation", features = ["testing"]}
passivate_hyp_names = { path = "../hyp_names" }
passivate_model_core = { path = "../model/core" }
passivate_cargo = { path = "../cargo" }

bon.workspace = true
camino.workspace = true
serde.workspace = true
thiserror.workspace = true
mockall.workspace = true
indexmap.workspace = true
serde_json.workspace = true
