[package]
name = "passivate_delegation"
version = "0.1.0"
edition = "2024"

[dependencies]
faux.workspace = true
crossbeam-channel.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"]}
proc-macro2.workspace = true
thiserror.workspace = true

[dev-dependencies]
mockall.workspace = true

[features]
testing = []
