[package]
name = "passivate"
version = "0.1.0"
edition = "2021"

[dependencies]
passivate_core = { path = "../passivate_core" }

egui = { version = "0.31", features = [ ] }
egui_dock = "0.16.0"
notify = "8.0.0"
futures = "0.3.31"
chrono = "0.4.40"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "preserve_order" ] }
indexmap = { version = "2.8.0", features = [ "serde" ] }

[dependencies.eframe]
version = "0.31"
default-features = false
features = [ "default_fonts", "wgpu", "accesskit", "wayland" ]

[dev-dependencies]
passivate_core = { path = "../passivate_core" }
mockall = "0.13.1"
libtest-mimic = "0.8.1"
egui_kittest = { version = "0.31.0", features = [ "wgpu", "snapshot" ] }
stdext = "0.3.3"
tokio = { version = "1.42.0", features = [ "full" ] }
rstest = "0.25.0"
pretty_assertions = "1.4.1"
galvanic-assert = "0.8.7"

[[test]]
name = "passivate_tests"
harness = false