[package]
name = "passivate"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_core = { path = "../passivate_core" }
passivate_egui = { path = "../passivate_egui" }
passivate_delegation = { path = "../passivate_delegation" }
passivate_hyp_model = { path = "../passivate_hyp_model" }

clap.workspace = true
egui.workspace = true
egui_dock.workspace = true
futures.workspace = true
chrono.workspace = true
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true, features = [ "preserve_order" ] }
indexmap = { workspace = true, features = [ "serde" ] }
crossbeam-channel.workspace = true
dunce.workspace = true
camino.workspace = true
eframe.workspace = true
log.workspace = true

[dev-dependencies]
mockall.workspace = true
libtest-mimic.workspace = true
egui_kittest.workspace = true
stdext.workspace = true
tokio.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
galvanic-assert.workspace = true

[[test]]
name = "passivate_tests"
harness = false
