[package]
name = "passivate_core"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_delegation = { path = "../passivate_delegation", features = ["testing"]}
passivate_hyp_names = { path = "../passivate_hyp_names" }
passivate_configuration = { path = "../passivate_configuration" }
passivate_testing = { path = "../passivate_testing" }

#nextest-runner = { path = "../../../passivate-nextest/nextest-runner" }
#nextest-filtering = { path = "../../../passivate-nextest/nextest-filtering" }

nextest-runner = { git = "https://github.com/TobiasvdVenOrg/passivate-nextest", branch = "non-cli-use", package = "nextest-runner" }
nextest-filtering = { git = "https://github.com/TobiasvdVenOrg/passivate-nextest", branch = "non-cli-use", package = "nextest-filtering" }

faux.workspace = true
clap.workspace = true
futures.workspace = true
fs_extra.workspace = true
thiserror.workspace = true
mockall.workspace = true
enum-as-inner.workspace = true
duct.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
cargo_metadata.workspace = true
epaint.workspace = true
png.workspace = true
bon.workspace = true
crossbeam-channel.workspace = true
dunce.workspace = true
camino.workspace = true
guppy.workspace = true
itertools.workspace = true
log.workspace = true

[dev-dependencies]
rstest.workspace = true
stdext.workspace = true
pretty_assertions.workspace = true
galvanic-assert.workspace = true
