[package]
name = "passivate_core"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_delegation = { path = "../passivate_delegation", features = ["testing"]}
passivate_hyp_names = { path = "../passivate_hyp_names" }
passivate_hyp_model = { path = "../passivate_hyp_model" }
passivate_hyp_execution = { path = "../passivate_hyp_execution" }
passivate_configuration = { path = "../passivate_configuration" }
passivate_log = { path = "../passivate_log" }
passivate_notify = { path = "../passivate_notify" }
passivate_coverage = { path = "../passivate_coverage" }
passivate_testing = { path = "../passivate_testing" }

faux.workspace = true
clap.workspace = true
futures.workspace = true
fs_extra.workspace = true
thiserror.workspace = true
mockall.workspace = true
duct.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
bon.workspace = true
crossbeam-channel.workspace = true
dunce.workspace = true
camino.workspace = true
guppy.workspace = true
itertools.workspace = true
log.workspace = true

[dev-dependencies]
rstest.workspace = true
stdext.workspace = true
pretty_assertions.workspace = true
galvanic-assert.workspace = true
