[package]
name = "passivate_delegation"
version = "0.1.0"
edition = "2024"

[dependencies]
faux = { path = "D:/Projects/faux" }
crossbeam-channel = "0.5.14"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"]}
proc-macro2 = "1.0.101"

[dev-dependencies]
mockall = "0.13.1"

[features]
testing = []