[package]
name = "passivate_testing"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_hyp_names = { path = "../hyp_names" }
passivate_id_chain_tree = { path = "../id_chain_tree" }
passivate_model_bridge = { path = "../model/bridge" }
passivate_model_core = { path = "../model/core" }

bon.workspace = true
camino.workspace = true
dunce.workspace = true
log.workspace = true
enum-display-derive.workspace = true
