[package]
name = "sample_project"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.31", features = [ ] }

[dependencies.eframe]
version = "0.31"
default-features = false
features = [ "default_fonts", "wgpu", "accesskit", "wayland" ]

[dev-dependencies]
egui_kittest = { version = "0.31.0", features = [ "wgpu", "snapshot" ] }
