[package]
name = "passivate_egui_docking"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_configuration = { path = "../../passivate_configuration" }

camino.workspace = true
egui.workspace = true
egui_dock = { workspace = true, features = [ "serde" ] }
log.workspace = true
serde.workspace = true
