[package]
name = "passivate_egui_hyp_snapshots"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_model_bridge = { path = "../../model/bridge" }
passivate_model_core = { path = "../../model/core" }

camino.workspace = true
egui.workspace = true
epaint.workspace = true
png.workspace = true
thiserror.workspace = true

[dev-dependencies]
