[package]
name = "passivate_egui_views"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_delegation = { path = "../../delegation" }
passivate_hyp_names = { path = "../../hyp_names" }
passivate_hyp_model = { path = "../../passivate_hyp_model" }
passivate_hyp_execution = { path = "../../passivate_hyp_execution" }
passivate_configuration = { path = "../../configuration" }
passivate_log = { path = "../../log" }
passivate_coverage = { path = "../../coverage" }
passivate_core = { path = "../../core" }
passivate_egui_docking = { path = "../docking" }

camino.workspace = true
chrono.workspace = true
egui.workspace = true
egui_dock = { workspace = true, features = [ "serde" ] }
indexmap = { workspace = true, features = [ "serde" ] }
log.workspace = true
thiserror.workspace = true
png.workspace = true
epaint.workspace = true

[dev-dependencies]
passivate_testing = { path = "../../testing" }

egui_kittest.workspace = true
galvanic-assert.workspace = true
stdext.workspace = true
rstest.workspace = true
itertools.workspace = true
