[package]
name = "passivate_egui_views"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_delegation = { path = "../../delegation" }
passivate_configuration = { path = "../../configuration" }
passivate_core = { path = "../../core" }
passivate_model_bridge = { path = "../../model/bridge" }
passivate_model_core = { path = "../../model/core" }
passivate_egui_core = { path = "../core" }
passivate_egui_docking = { path = "../docking" }
passivate_id_chain_tree = { path = "../../id_chain_tree" }
passivate_egui_view_configuration = { path = "../view/configuration" }
passivate_egui_view_coverage = { path = "../view/coverage" }
passivate_egui_view_details = { path = "../view/details" }
passivate_egui_view_log = { path = "../view/log" }
passivate_egui_view_session = { path = "../view/session" }

camino.workspace = true
chrono.workspace = true
egui.workspace = true
egui_dock = { workspace = true, features = [ "serde" ] }
log.workspace = true
thiserror.workspace = true
png.workspace = true
epaint.workspace = true

[dev-dependencies]
passivate_testing = { path = "../../testing" }
passivate_hyp_names = { path = "../../hyp_names" }
passivate_model_rust = { path = "../../model/rust" }

egui_kittest.workspace = true
galvanic-assert.workspace = true
stdext.workspace = true
rstest.workspace = true
itertools.workspace = true
