[package]
name = "passivate_model_bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_hyp_names = { path = "../../hyp_names" }
passivate_id_chain_tree = { path = "../../id_chain_tree" }
passivate_delegation = { path = "../../delegation" }

mockall.workspace = true
enum-display-derive.workspace = true
log.workspace = true
