[package]
name = "passivate_model_bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_hyp_names = { path = "../../hyp_names" }
passivate_id_chain_tree = { path = "../../id_chain_tree" }
passivate_delegation = { path = "../../delegation" }
passivate_configuration = { path = "../../configuration" }

bon.workspace = true
camino.workspace = true
mockall.workspace = true
log.workspace = true

[dev-dependencies]
passivate_testing = { path = "../../testing" }

[features]
testing = []
