[package]
name = "passivate_model_core"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_hyp_names = { path = "../../hyp_names" }
passivate_delegation = { path = "../../delegation" }
passivate_id_chain_tree = { path = "../../id_chain_tree" }
passivate_model_bridge = { path = "../bridge" }

log.workspace = true
camino.workspace = true
itertools.workspace = true
thiserror.workspace = true

[dev-dependencies]
passivate_testing = { path = "../../testing" }

assert_matches.workspace = true
galvanic-assert.workspace = true
