[package]
name = "passivate_run_core"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_delegation = { path = "../../delegation" }
passivate_model_core = { path = "../../model/core" }
passivate_model_bridge = { path = "../../model/bridge" }

thiserror.workspace = true
faux.workspace = true
