[package]
name = "passivate_run_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_delegation = { path = "../../delegation" }
passivate_model_session = { path = "../../model/session" }
passivate_configuration = { path = "../../configuration" }
passivate_hyp_names = { path = "../../hyp_names" }
passivate_coverage = { path = "../../coverage" }

#nextest-runner = { path = "../../../passivate-nextest/nextest-runner" }
#nextest-filtering = { path = "../../../passivate-nextest/nextest-filtering" }
nextest-runner = { git = "https://github.com/TobiasvdVenOrg/passivate-nextest", branch = "non-cli-use", package = "nextest-runner" }
nextest-filtering = { git = "https://github.com/TobiasvdVenOrg/passivate-nextest", branch = "non-cli-use", package = "nextest-filtering" }

log.workspace = true
bon.workspace = true
thiserror.workspace = true
camino.workspace = true
faux.workspace = true
dunce.workspace = true
guppy.workspace = true
itertools.workspace = true
stdext.workspace = true

[dev-dependencies]
passivate_testing = { path = "../../testing" }

assert_matches.workspace = true
pretty_assertions.workspace = true
galvanic-assert.workspace = true
