[package]
name = "passivate_run_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_delegation = { path = "../../delegation" }
passivate_model_core = { path = "../../model/core" }
passivate_model_bridge = { path = "../../model/bridge" }
passivate_model_rust = { path = "../../model/rust" }
passivate_configuration = { path = "../../configuration" }
passivate_hyp_names = { path = "../../hyp_names" }
passivate_coverage = { path = "../../coverage" }
passivate_run_core = { path = "../core" }
passivate_id_chain_tree = { path = "../../id_chain_tree" }

#nextest-runner = { path = "../../../passivate-nextest/nextest-runner" }
#nextest-filtering = { path = "../../../passivate-nextest/nextest-filtering" }
nextest-runner = { git = "https://github.com/TobiasvdVenOrg/passivate-nextest", branch = "non-cli-use", package = "nextest-runner" }
nextest-filtering = { git = "https://github.com/TobiasvdVenOrg/passivate-nextest", branch = "non-cli-use", package = "nextest-filtering" }

log.workspace = true
bon.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
camino.workspace = true
dunce.workspace = true
guppy.workspace = true
itertools.workspace = true
stdext.workspace = true
mockall.workspace = true

[dev-dependencies]
passivate_testing = { path = "../../testing" }

assert_matches.workspace = true
pretty_assertions.workspace = true
galvanic-assert.workspace = true
