[package]
name = "passivate_egui_view_coverage"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_configuration = { path = "../../../configuration" }
passivate_coverage = { path = "../../../coverage" }
passivate_delegation = { path = "../../../delegation" }

egui.workspace = true

[dev-dependencies]
passivate_run_core = { path = "../../../run/core" }
passivate_run_rust = { path = "../../../run/rust" }
passivate_hyp_names = { path = "../../../hyp_names" }

egui_kittest.workspace = true
indexmap = { workspace = true, features = [ "serde" ] }
