[package]
name = "passivate_egui_view_details"
version = "0.1.0"
edition = "2024"

[dependencies]
passivate_delegation = { path = "../../../delegation" }
passivate_model_core = { path = "../../../model/core" }
passivate_model_bridge = { path = "../../../model/bridge" }
passivate_egui_hyp_snapshots = { path = "../../hyp_snapshots" }
passivate_egui_core = { path = "../../core" }
passivate_run_rust = { path = "../../../run/rust" }
passivate_hyp_names = { path = "../../../hyp_names" }

camino.workspace = true
egui.workspace = true

[dev-dependencies]
passivate_testing = { path = "../../../testing" }

egui_kittest.workspace = true
galvanic-assert.workspace = true
rstest.workspace = true
